# beep

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
man/: Makefile  beep.1  beep.1.md
src/: main.rs
